{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 616,
  "lineage": "c5de3ad5-763a-8878-1416-1ada5d9d23c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group/sg-028907406793e1560",
            "description": "Allows PostGres Traffic only from web server",
            "egress": [],
            "id": "sg-028907406793e1560",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e6cc5fc0337b815"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sre-god-project-db_sg",
            "name_prefix": "",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "sg-028907406793e1560",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group/sg-01e6cc5fc0337b815",
            "description": "Allows SSH and HTTP traffic",
            "egress": [],
            "id": "sg-01e6cc5fc0337b815",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "sre-god-project-web_sg",
            "name_prefix": "",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "sg-01e6cc5fc0337b815",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-03ab401e88284824a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab401e88284824a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "tags": {
              "Name": "sre-god-project-public-ap-south-1a"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f07a6e1060cd2a8",
            "arn": "arn:aws:ec2:ap-south-1:897722695334:instance/i-0e90cbb79fbc3f64f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile",
            "id": "i-0e90cbb79fbc3f64f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "general-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05ebc925c2725d2f3"
              }
            ],
            "primary_network_interface_id": "eni-05ebc925c2725d2f3",
            "private_dns": "ip-10-0-0-47.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-15-206-74-105.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.74.105",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01113ebcf7d982827",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ab401e88284824a",
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "vpc_security_group_ids": [
              "sg-01e6cc5fc0337b815",
              "sg-0ab5ff2564e757dac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "i-0e90cbb79fbc3f64f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group/sg-0ab5ff2564e757dac",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ab5ff2564e757dac",
            "ingress": [],
            "name": "sre-god-project-ec2-20250910024718377700000006",
            "name_prefix": "sre-god-project-ec2-",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "sg-0ab5ff2564e757dac",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group-rule/sgr-02cd1f9158f8fdb2a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-02cd1f9158f8fdb2a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0ab5ff2564e757dac",
            "security_group_rule_id": "sgr-02cd1f9158f8fdb2a",
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2-ipv4_default",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2-ipv4_default",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group-rule/sgr-0474bd1f0691f9039",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0474bd1f0691f9039",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0ab5ff2564e757dac",
            "security_group_rule_id": "sgr-0474bd1f0691f9039",
            "tags": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2-ipv6_default",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "tags_all": {
              "CreatedBy": "DakshSawhney",
              "CreatedDate": "2025-09-10",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sre-god-project-ec2-ipv6_default",
              "Owner": "AIDA5CBDRH2TKUM2IPKKO",
              "Project": "sre_god_project"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:network-acl/acl-0985e3b27158febbe",
            "default_network_acl_id": "acl-0985e3b27158febbe",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0985e3b27158febbe",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-019dd5139ff787580",
              "subnet-03ab401e88284824a",
              "subnet-04856506d25750815",
              "subnet-0f359da68a2cc2ea1"
            ],
            "tags": {
              "Name": "sre-god-project-default"
            },
            "tags_all": {
              "Name": "sre-god-project-default"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:route-table/rtb-0d1b4fbd9bc66c66b",
            "default_route_table_id": "rtb-0d1b4fbd9bc66c66b",
            "id": "rtb-0d1b4fbd9bc66c66b",
            "owner_id": "897722695334",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "sre-god-project-default"
            },
            "tags_all": {
              "Name": "sre-god-project-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:security-group/sg-02554b29bfa7b189b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02554b29bfa7b189b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sre-god-project-default"
            },
            "tags_all": {
              "Name": "sre-god-project-default"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010446b319c84956e",
            "arn": "arn:aws:ec2:ap-south-1:897722695334:elastic-ip/eipalloc-010446b319c84956e",
            "domain": "vpc",
            "id": "eipalloc-010446b319c84956e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-218-56.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.218.56",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-ap-south-1a"
            },
            "tags_all": {
              "Name": "sre-god-project-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:internet-gateway/igw-0895f32e6bbb4cd3c",
            "id": "igw-0895f32e6bbb4cd3c",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project"
            },
            "tags_all": {
              "Name": "sre-god-project"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010446b319c84956e",
            "association_id": "eipassoc-0d4c47899285cc7de",
            "connectivity_type": "public",
            "id": "nat-0d2a44dcb567c5915",
            "network_interface_id": "eni-0bf2f3cf147786095",
            "private_ip": "10.0.0.233",
            "public_ip": "3.6.218.56",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ab401e88284824a",
            "tags": {
              "Name": "sre-god-project-ap-south-1a"
            },
            "tags_all": {
              "Name": "sre-god-project-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-025390519c0e7ebdb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d2a44dcb567c5915",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-025390519c0e7ebdb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-025390519c0e7ebdb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0895f32e6bbb4cd3c",
            "id": "r-rtb-012cf7f6c8054f6881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-012cf7f6c8054f688",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-012cf7f6c8054f688"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:route-table/rtb-025390519c0e7ebdb",
            "id": "rtb-025390519c0e7ebdb",
            "owner_id": "897722695334",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "sre-god-project-private"
            },
            "tags_all": {
              "Name": "sre-god-project-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "rtb-025390519c0e7ebdb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:route-table/rtb-012cf7f6c8054f688",
            "id": "rtb-012cf7f6c8054f688",
            "owner_id": "897722695334",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "sre-god-project-public"
            },
            "tags_all": {
              "Name": "sre-god-project-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "rtb-012cf7f6c8054f688",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915801e449d2c869",
            "region": "ap-south-1",
            "route_table_id": "rtb-025390519c0e7ebdb",
            "subnet_id": "subnet-02b0aa1854ffece7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ea5425a8074974",
            "region": "ap-south-1",
            "route_table_id": "rtb-025390519c0e7ebdb",
            "subnet_id": "subnet-0f359da68a2cc2ea1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0e779026572528d",
            "region": "ap-south-1",
            "route_table_id": "rtb-025390519c0e7ebdb",
            "subnet_id": "subnet-057c0c5fa6f6c917c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096dda50f5a47c2ff",
            "region": "ap-south-1",
            "route_table_id": "rtb-012cf7f6c8054f688",
            "subnet_id": "subnet-03ab401e88284824a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a7eafe2fca2c8b",
            "region": "ap-south-1",
            "route_table_id": "rtb-012cf7f6c8054f688",
            "subnet_id": "subnet-019dd5139ff787580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001a70ac0cf5d179d",
            "region": "ap-south-1",
            "route_table_id": "rtb-012cf7f6c8054f688",
            "subnet_id": "subnet-04856506d25750815"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-02b0aa1854ffece7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b0aa1854ffece7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "sre-god-project-private-ap-south-1a"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-02b0aa1854ffece7a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-0f359da68a2cc2ea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f359da68a2cc2ea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "sre-god-project-private-ap-south-1b"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-0f359da68a2cc2ea1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-057c0c5fa6f6c917c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c0c5fa6f6c917c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-private-ap-south-1c"
            },
            "tags_all": {
              "Name": "sre-god-project-private-ap-south-1c"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-057c0c5fa6f6c917c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-03ab401e88284824a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab401e88284824a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "sre-god-project-public-ap-south-1a"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-03ab401e88284824a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-019dd5139ff787580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019dd5139ff787580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "sre-god-project-public-ap-south-1b"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-019dd5139ff787580",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:subnet/subnet-04856506d25750815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04856506d25750815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722695334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project-public-ap-south-1c"
            },
            "tags_all": {
              "Name": "sre-god-project-public-ap-south-1c"
            },
            "vpc_id": "vpc-005aaf170bcea9720"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "897722695334",
            "id": "subnet-04856506d25750815",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897722695334:vpc/vpc-005aaf170bcea9720",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0985e3b27158febbe",
            "default_route_table_id": "rtb-0d1b4fbd9bc66c66b",
            "default_security_group_id": "sg-02554b29bfa7b189b",
            "dhcp_options_id": "dopt-0820f7cd4d7b295fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005aaf170bcea9720",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1b4fbd9bc66c66b",
            "owner_id": "897722695334",
            "region": "ap-south-1",
            "tags": {
              "Name": "sre-god-project"
            },
            "tags_all": {
              "Name": "sre-god-project"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}